# alphchemy

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  load_env.sh  mock_experiments.json  queue_mock.py  run_alphchemy.sh  state.json
agents/: agents.py  builddataframes.py  main.py  main_old.py  ontology.py  prompt.md  prompts.py  pyproject.toml  requirements.txt  sae.py  search.py  test.py
agents/.hypothesis/constants/: 059d6f3c202f7970  0adfa0670d701918  13938686434878ea  2495b4ed8368abe4  3817a3b403ccdd75  5b088eda4dad08f1  6882381e20179b80  79e229a297a4a249  a3de3f57ef0cdeda  cc5ecff2a5a255b0
agents/agents/: agent_system.py  arxiv.py  commands.py  nodes.py  prompt.md  prompts.py  state.py
agents/alphchemy/: fetch_data.py  pyproject.toml
agents/alphchemy/src/: dataframe_parse.py  experiment.json  generator.json  main.py  run_generator.py  serve_docs.py
agents/alphchemy/tests/: composites.py  test_agent_commands.py  test_agent_main.py  test_agent_system.py  test_analysis_query.py  test_analyze_data_command.py  test_commands.py  test_docs_server.py  test_experiment_submission.py  test_filters.py  test_generator_submission.py  test_json_path.py  test_main.py  test_mcp_server.py  test_nodes.py  test_notebook_worker.py  test_path_skip.py  test_prompts.py  test_query.py  test_query_format.py  test_state.py  test_subagent_command.py
agents/ontology/: build_dataframes.py  concept.py  ontology.py  parserow.py  sae.py  updater.py
agents/prompts/: main.py  prompt.md
agents/src/: dataframe_parse.py  generator.json  generator.py  main.py  test_generate.py  test_generator.py  test_parse_row.py  test_prompts.py
agents/src/agents/: agent_system.py  commands.py  format.py  nodes.py  prompt.md  prompts.py  state.py
agents/src/analysis/: __init__.py  filters.py  json_path.py  query.py
agents/src/generator/: generator.py  generators.py  load.py  params.py  verify.py
agents/src/ontology/: concept.py  parse_row.py  sae.py  updater.py
agents/src/prompts/: core_competencies.md  experiment_generator.md  experiment_ontology.md  multi_competencies.md  multi_main_env.md  multi_main_profile.md  multi_sub_env.md  multi_sub_profile.md  planner_profile.md  planner_tail.md  single_main_env.md  single_main_profile.md  single_sub_env.md  single_sub_profile.md  tail.md
agents/tests/: composites.py  test_agent_system.py  test_commands.py  test_filters.py  test_generator_schema.py  test_json_path.py  test_main.py  test_nodes.py  test_query.py  test_state.py
crates/: Cargo.toml
crates/alphchemy_analysis/: Cargo.toml
crates/alphchemy_analysis/src/: analysis.rs  filters.rs  format.rs  lib.rs  main.rs  path.rs  query.rs  service.rs  tools.rs
crates/alphchemy_analysis/tests/: query_tests.rs  service_tests.rs  tools_tests.rs
crates/alphchemy_convert/: Cargo.toml
crates/alphchemy_convert/src/: lib.rs  main.rs  process_pinescript.rs
crates/alphchemy_convert/tests/: pinescript_tests.rs
crates/alphchemy_docs/: Cargo.toml
crates/alphchemy_docs/src/: content.rs  docs.rs  main.rs
crates/alphchemy_docs/tests/: docs_tests.rs
crates/alphchemy_engine/: Cargo.toml
crates/alphchemy_engine/src/: experiment.rs  fetch_data.rs  lib.rs  optimizer.rs  test_utils.rs  utils.rs
crates/alphchemy_engine/tests/: actions_tests.rs  backtest_tests.rs  indicators_tests.rs  network_tests.rs  optimizer_tests.rs
crates/alphchemy_experiments/: Cargo.toml
crates/alphchemy_experiments/src/: fetch_data.rs  lib.rs  main.rs  process_experiment.rs
crates/alphchemy_experiments/tests/: experiment_tests.rs
crates/alphchemy_mcp/: Cargo.toml
crates/alphchemy_mcp/src/: lib.rs  main.rs  mcp_server.rs
crates/alphchemy_mcp/tests/: mcp_tests.rs
crates/alphchemy_parse/: Cargo.toml
crates/alphchemy_parse/src/: lib.rs  main.rs  utils.rs
crates/alphchemy_parse/tests/: parse_actions_tests.rs  parse_tests.rs
experiments/alphchemy/: Cargo.toml
experiments/alphchemy/src/: actions.rs  experiment.rs  fetch_data.rs  lib.rs  main.rs  network.rs  optimizer.rs  parse.rs  pinescript.rs  process_experiment.rs  process_feature.rs  process_feature_set.rs  process_pinescript.rs  process_validation.rs  test_utils.rs  utils.rs
experiments/alphchemy/tests/: actions_tests.rs  backtest_tests.rs  (+13 more)
(+1263 files in other folders)
