[workspace]
members = [
    "alphchemy_engine",
    "alphchemy_experiments",
    "alphchemy_parse",
    "alphchemy_convert"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alphchemy_engine = { path = "alphchemy_engine" }
alphchemy_parse = { path = "alphchemy_parse" }
approx = "0.5.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3"
hegeltest = "0.14.17"
mockall = "0.14.0"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
supabase_rs = "0.7.0"
tokio = { version = "1", features = ["full"] }
