[workspace]
members = [
    "alphchemy_analysis",
    "alphchemy_convert",
    "alphchemy_docs",
    "alphchemy_engine",
    "alphchemy_experiments",
    "alphchemy_mcp",
    "alphchemy_parse"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alphchemy_analysis = { path = "alphchemy_analysis" }
alphchemy_docs = { path = "alphchemy_docs" }
alphchemy_engine = { path = "alphchemy_engine" }
alphchemy_parse = { path = "alphchemy_parse" }
anyhow = "1"
approx = "0.5.1"
axum = "0.8.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3"
hegeltest = "0.14.17"
http-body-util = "0.1"
mockall = "0.14.0"
rand = "0.9"
regex = "1"
rmcp = { version = "2.2.0", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
rust_supabase_sdk = { version = "0.4.3", default-features = false, features = ["postgrest", "rustls"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
supabase_rs = "0.7.0"
thiserror = "2"
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
