[package]
name = "alphchemy_analysis"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
regex.workspace = true
rust_supabase_sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
http-body-util.workspace = true
