[package]
name = "alphchemy_mcp"
version.workspace = true
edition.workspace = true

[dependencies]
alphchemy_analysis.workspace = true
alphchemy_docs.workspace = true
axum.workspace = true
rmcp.workspace = true
rust_supabase_sdk.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
