[package]
name = "alphchemy"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
supabase_rs = "0.7.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
approx = "0.5.1"
hegeltest = "0.14.17"
mockall = "0.14.0"
